Mon Oct  2 15:08:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* logger.c (krb5_klog_init): If the log file can't be opened,
		print an intelligent error message.

Thu Oct  5 12:06:35 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* alt_prof.c (krb5_read_realm_params): If secure flag is set in
		context, do not allow for environment variables to specify
		configuration files.

Tue Sep 26 02:31:38 1995  Mark Eichin  <eichin@cygnus.com>

	* adm_conn.c (kadm_get_creds): zero out creds->server after
	freeing it to protect later attempts.

Fri Sep 29 17:06:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* logger.c: #ifdef the entire file so it's not built under Windows.

Tue Sep 27 12:00:00 1995    <jrivlin@fusion.com>

	* adm_kw_dec.c (krb5_adm_proto_to_dbent): Routine removed for 
		Windows and Mac to match with the prototype.

	* adm_kw_dec.c (krb5_adm_dbent_to_proto): Routine removed for 
		Windows and Mac to match with the prototype.

Tue Sep 26 16:24:00 1995    <tytso@rsts-11.mit.edu>

	* alt_prof.c (krb5_read_realm_params): On an error, initialize the
		returned rparams pointer to NULL.

Mon Sep 25 16:54:18 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Fri Sep 22 12:00:00 1995  James Mattly  <mattly@fusion.com>

	* adm_conn.c:  for sockets changed close to closesocket, sockets on
		macintosh arn't files.

Fri Sep 22 15:44:02 1995  Mark Eichin  <eichin@cygnus.com>

	* logger.c (klog_com_err_proc): pass whoami in failure messages
	for error log failures to match format string.

Wed Sep 13 10:45:25 1995 Keith Vetter (keithv@fusion.com)

	* keysalt.c: 16/32 bit integer mismatch.
	* str_conv.c: 	sftime_format_table is conditional upon HAVE_STRFTIME,
		cast some constants to long so that math wouldn't overflow,
		16/32 bit integer size mismatch.

Wed Sep 13 18:17:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* alt_prof.c (krb5_read_realm_params): Fix memory leak.  Free the